objects/Account__c.object
<CustomObject>
    <description>New Desc</description>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit_Card_Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number1__c</fullName>
        <label>Credit_Card_Number1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <description>added</description>
        <inlineHelpText>news newly</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <recordTypes>
        <fullName>RecordType1</fullName>
        <active>true</active>
        <label>RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType2</fullName>
        <active>false</active>
        <label>RecordType2</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType3</fullName>
        <active>false</active>
        <label>RecordType3</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>